# Idincode-software

./: .env.example  PENJELASAN.md  README.md  agency_buyers.yaml  baseai.txt  buyers.yaml  find_agency_buyers.py  find_buyer.py  generate_emails.py  pyproject.toml  requirements.txt  run.py  targets.yaml
.github/workflows/: research.yml
src/: __init__.py  agency_buyer_ai.py  agency_buyer_export.py  agency_buyer_finder.py  agency_buyers_loader.py  analyst.py  buyer_analyst.py  buyer_export.py  buyer_finder.py  buyers_loader.py  config.py  dedup_db.py  email_generator.py  enrichers.py  export.py  extras.py  loader.py  models.py  pdf_audit.py  pipeline.py  qualifier.py  reddit_scraper.py  targets_loader.py
