[project]
name = "apex-intel"
version = "0.1.0"
description = "Apex Market Intelligence - Lead qualification pipeline"
authors = [{name = "Idin Iskandar"}]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
